wip: probabilistic merge

--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,19 +1271,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[1, 1, 2, 2, 3, 3],\n",
-       "         [4, 5, 4, 5, 4, 5]], device='cuda:0'),\n",
-       " tensor([0.2315, 0.0135, 0.5234, 0.2590, 0.3352, 0.7120], device='cuda:0',\n",
-       "        dtype=torch.float64, requires_grad=True))"
+       "tensor(indices=tensor([[1, 1, 2, 2, 3, 3],\n",
+       "                       [4, 5, 4, 5, 4, 5]]),\n",
+       "       values=tensor([0.9842, 0.0947, 0.0742, 0.6526, 0.8400, 0.6287]),\n",
+       "       device='cuda:0', size=(16384, 16384), nnz=6, dtype=torch.float64,\n",
+       "       layout=torch.sparse_coo, grad_fn=<CoalesceBackward0>)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,16 +1294,8 @@
     "                      [4,5,4,5,4,5]], dtype=torch.int64, device=device)\n",
     "p_val = torch.rand(6, dtype=torch.float64, device=device, requires_grad=True)\n",
     "\n",
-    "p_idx, p_val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "S_idx, S_val = coalesce(S_idx, S_val, n, n)"
+    "P = torch.sparse_coo_tensor(p_idx, p_val, (n,n)).coalesce()\n",
+    "P"
    ]
   },
   {
@@ -1319,141 +1312,99 @@
     "\n",
     "Each $c$ is a sparse vector $\\in R^N$\n",
     "\n",
-    "$S \\leftarrow S || \\{p_{i,j}c_j | i \\in C_i, j \\in C_j \\}_{(1.)} || \\{-p_{i,j}c_j | j \\in C_j, i \\in C_i\\}_{(2.)}$\n",
+    "$S^{q+1} \\leftarrow S^q || \\{\\sum_{j \\in C_j} p_{i,j}c_j | i \\in C_i\\}^{(1.)}|| \\{(\\sum_{i \\in C_i}-p_{i,j}c_j)|j \\in C_j\\}^{(2.)}$\n",
     "- For each cluster in $C_i$, concatenate $p_{i,j}c_j$, with $c_j \\in R^{NxN}$, with the second row a sequence of $i$\n",
     "- For each cluster in $C_j$, concatenate $-p_{i,j}c_j$, with $c_j \\in R^{NxN}$, with the second row a sequence of $j$\n",
     "\n",
-    "$S \\leftarrow $ *coalesce*($S$)\n",
+    "$S^{q+1} \\leftarrow $ *coalesce*$(S^{q+1})$\n",
     "- Concatenate reducing duplicate entries (i.e., the entries just added) by sum "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[4, 5, 6],\n",
-      "        [4, 5, 5]], device='cuda:0') tensor([1., 1., 1.], device='cuda:0', dtype=torch.float64)\n",
-      "tensor([[1, 2, 3],\n",
-      "        [1, 2, 3]], device='cuda:0') tensor([1., 1., 1.], device='cuda:0', dtype=torch.float64)\n",
-      "tensor([[1, 1, 2, 2, 3, 3],\n",
-      "        [4, 5, 4, 5, 4, 5]], device='cuda:0') tensor([0.2315, 0.0135, 0.5234, 0.2590, 0.3352, 0.7120], device='cuda:0',\n",
-      "       dtype=torch.float64, requires_grad=True)\n"
-     ]
-    }
-   ],
-   "source": [
-    "indices = torch.isin(S_idx[1,:],(p_idx[1]))\n",
-    "Cj_idx, Cj_val = S_idx[:,indices], S_val[indices]\n",
-    "Cj_idx = torch.cat([Cj_idx, torch.tensor([[6],[5]], device=device)], dim=1)\n",
-    "Cj_val = torch.cat([Cj_val, torch.tensor([1.], device=device)])\n",
-    "print(Cj_idx, Cj_val)\n",
-    "\n",
-    "indices = torch.isin(S_idx[1,:], p_idx[0])\n",
-    "Ci_idx, Ci_val = S_idx[:, indices], S_val[indices]\n",
-    "print(Ci_idx, Ci_val)\n",
-    "\n",
-    "print(p_idx, p_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CjT_idx, CjT_val = transpose(Cj_idx, Cj_val, n, n)\n",
-    "pT_idx, pT_val = transpose(p_idx, p_val, n, n) "
+    "def get_nodes_from_segments(S:torch.Tensor, cs:torch.Tensor):\n",
+    "    S_idx, S_val = S.indices(), S.values()\n",
+    "    indices = torch.isin(S_idx[1,:], cs)\n",
+    "    C_idx, C_val = S_idx[:, indices], S_val[indices]\n",
+    "    return torch.sparse_coo_tensor(C_idx, C_val, (n,n)).coalesce()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[4, 4, 4, 5, 5, 5, 6, 6, 6],\n",
-      "        [1, 2, 3, 1, 2, 3, 1, 2, 3]], device='cuda:0') tensor([0.2315, 0.5234, 0.3352, 0.0135, 0.2590, 0.7120, 0.0135, 0.2590, 0.7120],\n",
-      "       device='cuda:0', dtype=torch.float64)\n"
-     ]
-    }
-   ],
-   "source": [
-    "CiC_idx, CiC_val = spspmm(Cj_idx, Cj_val, pT_idx, pT_val, n, n, n)\n",
-    "print(CiC_idx, CiC_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(indices=tensor([[0, 0, 1, 2, 2],\n",
-      "                       [1, 2, 0, 0, 1]]),\n",
-      "       values=tensor([1., 2., 3., 4., 5.]),\n",
-      "       size=(16384, 16384), nnz=5, layout=torch.sparse_coo,\n",
-      "       grad_fn=<SparseCooTensorWithDimsAndTensorsBackward0>)\n",
-      "tensor(indices=tensor([[0, 2],\n",
-      "                       [1, 0]]),\n",
-      "       values=tensor([2., 4.]),\n",
-      "       size=(16384, 16384), nnz=2, layout=torch.sparse_coo,\n",
-      "       grad_fn=<SparseCooTensorWithDimsAndTensorsBackward0>)\n",
-      "tensor(indices=tensor([[0, 1, 2],\n",
-      "                       [0, 1, 1]]),\n",
-      "       values=tensor([8., 6., 8.]),\n",
-      "       size=(16384, 16384), nnz=3, layout=torch.sparse_coo,\n",
-      "       grad_fn=<SparseSparseMatmulBackward0>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "indexA = torch.tensor([[0, 0, 1, 2, 2], [1, 2, 0, 0, 1]])\n",
-    "valueA = torch.Tensor([1., 2., 3., 4., 5.])\n",
-    "valueA.requires_grad = True\n",
-    "A = torch.sparse_coo_tensor(indexA, valueA, (n,n))\n",
-    "\n",
-    "indexB = torch.tensor([[0, 2], [1, 0]])\n",
-    "valueB = torch.Tensor([2., 4.])\n",
-    "valueB.requires_grad = True\n",
-    "B = torch.sparse_coo_tensor(indexB, valueB, (n,n))\n",
-    "\n",
-    "C = torch.sparse.mm(A, B)\n",
-    "print(A)\n",
-    "print(B)\n",
-    "print(C)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([10.,  8., 10.], grad_fn=<AddBackward0>)"
+       "(tensor(indices=tensor([[1, 2, 3],\n",
+       "                        [1, 2, 3]]),\n",
+       "        values=tensor([1., 1., 1.]),\n",
+       "        device='cuda:0', size=(16384, 16384), nnz=3, dtype=torch.float64,\n",
+       "        layout=torch.sparse_coo),\n",
+       " tensor(indices=tensor([[4, 5, 6, 6],\n",
+       "                        [4, 5, 4, 5]]),\n",
+       "        values=tensor([1.0000, 1.0000, 0.2500, 1.0000]),\n",
+       "        device='cuda:0', size=(16384, 16384), nnz=4, dtype=torch.float64,\n",
+       "        layout=torch.sparse_coo),\n",
+       " tensor(indices=tensor([[1, 1, 2, 2, 3, 3],\n",
+       "                        [4, 5, 4, 5, 4, 5]]),\n",
+       "        values=tensor([0.9842, 0.0947, 0.0742, 0.6526, 0.8400, 0.6287]),\n",
+       "        device='cuda:0', size=(16384, 16384), nnz=6, dtype=torch.float64,\n",
+       "        layout=torch.sparse_coo, grad_fn=<CoalesceBackward0>))"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "valueC = C.values()\n",
-    "valueC = valueC + 2\n",
-    "valueC"
+    "Ci = get_nodes_from_segments(S, P.indices()[0])\n",
+    "Cj = get_nodes_from_segments(S, P.indices()[1])\n",
+    "\n",
+    "# for example..\n",
+    "Cj_idx = torch.cat([Cj.indices(), torch.tensor([[6,6],[5,4]], device=device)], dim=1)\n",
+    "Cj_val = torch.cat([Cj.values(), torch.tensor([1., 0.25], device=device)])\n",
+    "Cj = torch.sparse_coo_tensor(Cj_idx, Cj_val, (n,n)).coalesce()\n",
+    "\n",
+    "Ci, Cj, P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(indices=tensor([[4, 4, 4, 5, 5, 5, 6, 6, 6],\n",
+      "                       [1, 2, 3, 1, 2, 3, 1, 2, 3]]),\n",
+      "       values=tensor([0.9842, 0.0742, 0.8400, 0.0947, 0.6526, 0.6287, 0.3407,\n",
+      "                      0.6712, 0.8387]),\n",
+      "       device='cuda:0', size=(16384, 16384), nnz=9, dtype=torch.float64,\n",
+      "       layout=torch.sparse_coo, grad_fn=<SparseSparseMatmulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "CiC = torch.sparse.mm(Cj, P.T)\n",
+    "print(CiC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CjC = ?"
    ]
   },
   {
@@ -1504,7 +1455,7 @@
     "\n",
     "$$ MInt(V_i, V_j) = \\min(Int(V_i) + \\tau(V_i), Int(V_j) + \\tau(V_j))  \\in R^{N \\times N}$$\n",
     "\n",
-    "With $\\min(\\dots)$ actually as the Smooth Minimum Unit of all segment combination. So, in the order of $N^2$. And, \n",
+    "With $\\min(\\dots)$ actually as the Smooth Minimum Unit of all segment combinations. So, in the order of $N^2$. And, \n",
     "$$\\tau(V_i) = \\frac{k}{\\{|C_i| | i \\in V_i\\}} \\in R^N$$\n"
    ]
   },
@@ -1530,7 +1481,7 @@
     "    Vi_val = -(Vi_val @ torch.ones_like(Vj_val))\n",
     "    Vj_val = -(torch.ones_like(Vi_val) @ Vj_val)\n",
     "\n",
-    "    # Smooth Maximum Unit\n",
+    "    #       Smooth Maximum Unit\n",
     "    smu = -(Vi_val + Vj_val + torch.sqrt((Vi_val - Vj_val)**2 + mu**2))/2 \n",
     "    return smu \n",
     "\n",
