wip: computing segment size and internal diffs on merge

--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -1498,11 +1498,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 2, 2, 2, 2])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = torch.tensor([0,1,2,3,4,5])\n",
+    "idx = torch.tensor([1,2,3,4,5,5,3,1])\n",
+    "src = torch.ones_like(idx)\n",
+    "\n",
+    "scatter(src*2,idx,out=out, reduce=\"min\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_segments(P, S):\n",
+    "def merge_segments(P, S, segment_sizes, internal_diffs, w):\n",
     "    Cj = get_nodes_from_segments(S, P.indices()[1])\n",
     "\n",
     "    CiC = torch.sparse.mm(Cj, P.T)\n",
@@ -1517,6 +1548,10 @@
     "    S_new_val = torch.concat([S.values(), CiC.values(), CjC.values()], dim=-1)\n",
     "    S_new = torch.sparse_coo_tensor(S_new_idx, S_new_val, (n,n)).coalesce()\n",
     "\n",
+    "    segment_sizes = scatter(CiC.values(), CiC.indices(), out=segment_sizes)\n",
+    "    segment_sizes = scatter(CjC.values(), CjC.indices(), out=segment_sizes)\n",
+    "\n",
+    "    internal_diffs = scatter()\n",
     "    return  S_new"
    ]
   },
@@ -1699,6 +1734,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S, edge_queue, edge_weights, I, segment_size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -1714,14 +1758,18 @@
    "outputs": [],
    "source": [
     "# with torch.no_grad():\n",
-    "for i in edge_queue:\n",
-    "    w = edge_weights[i]\n",
-    "    vi, vj = g.edge_index[:, i]\n",
-    "    ci, cj = get_segment(vi, S), get_segment(vj, S)\n",
+    "for idx in range(len(edge_queue)):\n",
+    "    edge_idx = edge_queue[idx]\n",
+    "    w = edge_weights[edge_idx]\n",
     "\n",
-    "    p = merge_probability(ci, cj, w, temperature=10)\n",
+    "    vi, vj = g.edge_index[:, edge_idx]\n",
+    "    Vi = get_segments(vi, S)\n",
+    "    Vj = get_segments(vj, S)\n",
+    "    \n",
+    "    P = merge_probability(Vi, Vj, w, temperature=8)\n",
     "\n",
-    "    S = merge_segments(ci, cj, p, S)\n",
+    "    S = merge_segments(P, S)\n",
+    "    \n",
     "    segment_size[ci] = p*(segment_size[ci] + segment_size[cj]) + (1-p)*segment_size[ci] # expected value\n",
     "    I[ci] = p*w +  (1-p)*I[ci]"
    ]
