--- a/felzenszwalb.ipynb
+++ b/felzenszwalb.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "metadata": {}
    },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "Data(x=[16384, 5], edge_index=[2, 64770], pos=[16384, 2])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
        " torch.Size([64770]))"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
        "tensor([ 7851,  9136,  9263,  ..., 43404, 43526, 59669], device='cuda:0')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,10 +1666,8 @@
     "    S_new_idx, S_new_val = coalesce(S_new_idx, S_new_val, n, n)\n",
     "    S_new = clean_up(S_new_idx, S_new_val)\n",
     "    \n",
-    "    segment_sizes += torch.sparse.mm(P,segment_sizes.unsqueeze(1)).flatten() + torch.sparse.mm(Pj,segment_sizes.unsqueeze(1)).flatten()\n",
-    "                                    \n",
-    "    # segment_sizes = scatter(CiC.values(), CiC.indices()[1,:], out=segment_sizes)\n",
-    "    # segment_sizes = scatter(CjC.values(), CjC.indices()[1,:], out=segment_sizes)\n",
+    "    segment_sizes += torch.sparse.mm(P,segment_sizes.unsqueeze(1)).flatten() \\\n",
+    "                  +  torch.sparse.mm(Pj,segment_sizes.unsqueeze(1)).flatten()\n",
     "\n",
     "    Pi = scatter(P.values(), P.indices()[0,:], dim_size=n)\n",
     "    internal_diffs = Pi*w + (1-Pi)*internal_diffs\n",
@@ -1700,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1857,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1878,13 +1876,13 @@
        "        device='cuda:0', size=(16384, 16384), nnz=16384, dtype=torch.float64,\n",
        "        layout=torch.sparse_coo),\n",
        " tensor([ 7851,  9136,  9263,  ..., 43404, 43526, 59669], device='cuda:0'),\n",
-       " tensor([0.0466, 0.2163, 0.7224,  ..., 0.1427, 0.1972, 0.1605], device='cuda:0',\n",
-       "        dtype=torch.float64),\n",
-       " tensor([0., 0., 0.,  ..., 0., 0., 0.], device='cuda:0'),\n",
-       " tensor([1., 1., 1.,  ..., 1., 1., 1.], device='cuda:0'))"
+       " tensor([ 11.8891,  55.1674, 184.2019,  ...,  36.3882,  50.2743,  40.9240],\n",
+       "        device='cuda:0', dtype=torch.float64),\n",
+       " tensor([0., 0., 0.,  ..., 0., 0., 0.], device='cuda:0', dtype=torch.float64),\n",
+       " tensor([1., 1., 1.,  ..., 1., 1., 1.], device='cuda:0', dtype=torch.float64))"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1895,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,30 +1909,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Not compiled with CUDA support",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 12\u001b[0m\n\u001b[1;32m      8\u001b[0m Vj \u001b[38;5;241m=\u001b[39m get_segments(vj, S)\n\u001b[1;32m     10\u001b[0m P \u001b[38;5;241m=\u001b[39m merge_probability(Vi, Vj, w, temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m S, segment_size, internal_diffs \u001b[38;5;241m=\u001b[39m \u001b[43mmerge_segments\u001b[49m\u001b[43m(\u001b[49m\u001b[43mP\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msegment_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minternal_diffs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m idx \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \n",
+      "Cell \u001b[0;32mIn[19], line 14\u001b[0m, in \u001b[0;36mmerge_segments\u001b[0;34m(P, S, segment_sizes, internal_diffs, w)\u001b[0m\n\u001b[1;32m     12\u001b[0m S_new_idx \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mconcat([S\u001b[38;5;241m.\u001b[39mindices(), CiC\u001b[38;5;241m.\u001b[39mindices(), CjC\u001b[38;5;241m.\u001b[39mindices()], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     13\u001b[0m S_new_val \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mconcat([S\u001b[38;5;241m.\u001b[39mvalues(), CiC\u001b[38;5;241m.\u001b[39mvalues(), CjC\u001b[38;5;241m.\u001b[39mvalues()], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m---> 14\u001b[0m S_new_idx, S_new_val \u001b[38;5;241m=\u001b[39m \u001b[43mcoalesce\u001b[49m\u001b[43m(\u001b[49m\u001b[43mS_new_idx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mS_new_val\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m S_new \u001b[38;5;241m=\u001b[39m clean_up(S_new_idx, S_new_val)\n\u001b[1;32m     17\u001b[0m segment_sizes \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msparse\u001b[38;5;241m.\u001b[39mmm(P,segment_sizes\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m))\u001b[38;5;241m.\u001b[39mflatten() \\\n\u001b[1;32m     18\u001b[0m               \u001b[38;5;241m+\u001b[39m  torch\u001b[38;5;241m.\u001b[39msparse\u001b[38;5;241m.\u001b[39mmm(Pj,segment_sizes\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m))\u001b[38;5;241m.\u001b[39mflatten()\n",
+      "File \u001b[0;32m~/miniconda3/envs/gs/lib/python3.10/site-packages/torch_sparse/coalesce.py:24\u001b[0m, in \u001b[0;36mcoalesce\u001b[0;34m(index, value, m, n, op)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Row-wise sorts :obj:`value` and removes duplicate entries. Duplicate\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03mentries are removed by scattering them together. For scattering, any\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03moperation of `\"torch_scatter\"<https://github.com/rusty1s/pytorch_scatter>`_\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;124;03m:rtype: (:class:`LongTensor`, :class:`Tensor`)\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     22\u001b[0m storage \u001b[38;5;241m=\u001b[39m SparseStorage(row\u001b[38;5;241m=\u001b[39mindex[\u001b[38;5;241m0\u001b[39m], col\u001b[38;5;241m=\u001b[39mindex[\u001b[38;5;241m1\u001b[39m], value\u001b[38;5;241m=\u001b[39mvalue,\n\u001b[1;32m     23\u001b[0m                         sparse_sizes\u001b[38;5;241m=\u001b[39m(m, n), is_sorted\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m---> 24\u001b[0m storage \u001b[38;5;241m=\u001b[39m \u001b[43mstorage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoalesce\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduce\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mop\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mstack([storage\u001b[38;5;241m.\u001b[39mrow(), storage\u001b[38;5;241m.\u001b[39mcol()], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m), storage\u001b[38;5;241m.\u001b[39mvalue()\n",
+      "File \u001b[0;32m~/miniconda3/envs/gs/lib/python3.10/site-packages/torch_sparse/storage.py:451\u001b[0m, in \u001b[0;36mSparseStorage.coalesce\u001b[0;34m(self, reduce)\u001b[0m\n\u001b[1;32m    449\u001b[0m     ptr \u001b[38;5;241m=\u001b[39m mask\u001b[38;5;241m.\u001b[39mnonzero()\u001b[38;5;241m.\u001b[39mflatten()\n\u001b[1;32m    450\u001b[0m     ptr \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat([ptr, ptr\u001b[38;5;241m.\u001b[39mnew_full((\u001b[38;5;241m1\u001b[39m, ), value\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m0\u001b[39m))])\n\u001b[0;32m--> 451\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[43msegment_csr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mptr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduce\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mreduce\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    453\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m SparseStorage(\n\u001b[1;32m    454\u001b[0m     row\u001b[38;5;241m=\u001b[39mrow,\n\u001b[1;32m    455\u001b[0m     rowptr\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    465\u001b[0m     trust_data\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m    466\u001b[0m )\n",
+      "File \u001b[0;32m~/miniconda3/envs/gs/lib/python3.10/site-packages/torch_scatter/segment_csr.py:101\u001b[0m, in \u001b[0;36msegment_csr\u001b[0;34m(src, indptr, out, reduce)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;124;03mReduces all values from the :attr:`src` tensor into :attr:`out` within the\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;124;03mranges specified in the :attr:`indptr` tensor along the last dimension of\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[38;5;124;03m    torch.Size([10, 3, 64])\u001b[39;00m\n\u001b[1;32m     99\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m reduce \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msum\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124madd\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m--> 101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43msegment_sum_csr\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindptr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    102\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m reduce \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m    103\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m segment_mean_csr(src, indptr, out)\n",
+      "File \u001b[0;32m~/miniconda3/envs/gs/lib/python3.10/site-packages/torch_scatter/segment_csr.py:8\u001b[0m, in \u001b[0;36msegment_sum_csr\u001b[0;34m(src, indptr, out)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msegment_sum_csr\u001b[39m(src: torch\u001b[38;5;241m.\u001b[39mTensor, indptr: torch\u001b[38;5;241m.\u001b[39mTensor,\n\u001b[1;32m      7\u001b[0m                     out: Optional[torch\u001b[38;5;241m.\u001b[39mTensor] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m torch\u001b[38;5;241m.\u001b[39mTensor:\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mops\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtorch_scatter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msegment_sum_csr\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindptr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/_ops.py:755\u001b[0m, in \u001b[0;36mOpOverloadPacket.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    750\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    751\u001b[0m     \u001b[38;5;66;03m# overloading __call__ to ensure torch.ops.foo.bar()\u001b[39;00m\n\u001b[1;32m    752\u001b[0m     \u001b[38;5;66;03m# is still callable from JIT\u001b[39;00m\n\u001b[1;32m    753\u001b[0m     \u001b[38;5;66;03m# We save the function ptr as the `op` attribute on\u001b[39;00m\n\u001b[1;32m    754\u001b[0m     \u001b[38;5;66;03m# OpOverloadPacket to access it here.\u001b[39;00m\n\u001b[0;32m--> 755\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_op\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Not compiled with CUDA support"
+     ]
+    }
+   ],
    "source": [
-    "# with torch.no_grad():\n",
-    "while idx < len(edge_queue):\n",
-    "    edge_idx = edge_queue[idx]\n",
-    "    w = edge_weights[edge_idx]\n",
+    "with torch.no_grad():\n",
+    "    while idx < len(edge_queue):\n",
+    "        edge_idx = edge_queue[idx]\n",
+    "        w = edge_weights[edge_idx]\n",
     "\n",
-    "    vi, vj = g.edge_index[:, edge_idx]\n",
-    "    Vi = get_segments(vi, S)\n",
-    "    Vj = get_segments(vj, S)\n",
+    "        vi, vj = g.edge_index[:, edge_idx]\n",
+    "        Vi = get_segments(vi, S)\n",
+    "        Vj = get_segments(vj, S)\n",
     "\n",
-    "    P = merge_probability(Vi, Vj, w, temperature=5)\n",
-    "    if P.values().isnan().any().item():\n",
-    "        print('nan')\n",
-    "        break\n",
+    "        P = merge_probability(Vi, Vj, w, temperature=5)\n",
     "\n",
-    "    S, segment_size, internal_diffs = merge_segments(P, S, segment_size, internal_diffs, w)\n",
-    "    if idx % 1000 == 0 and idx > 0:\n",
-    "        segments.append(to_segments(S.to('cpu'), width, height))\n",
-    "        int_diffs.append(internal_diffs.to('cpu'))\n",
-    "        sizes.append(segment_size.to('cpu'))\n",
-    "    idx += 1 "
+    "        S, segment_size, internal_diffs = merge_segments(P, S, segment_size, internal_diffs, w)\n",
+    "        idx += 1 "
    ]
   },
   {
@@ -2396,7 +2423,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "gs",
    "language": "python",
    "name": "python3"
   },
@@ -2410,7 +2437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
