--- a/ode-felzenszwalb.ipynb
+++ b/ode-felzenszwalb.ipynb
@@ -3,7 +3,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Pkg\n",
+    "Pkg.add(\"CUDA\")\n",
+    "Pkg.add(\"cuDNN\")\n",
+    "Pkg.add(\"Flux\")\n",
+    "Pkg.add(\"Graphs\")\n",
+    "Pkg.add(\"GraphNeuralNetworks\")\n",
+    "Pkg.add(\"SparseArrays\")\n",
+    "Pkg.add(\"Images\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m Opus_jll ───────────────────── v1.3.3+0\n",
+      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m libfdk_aac_jll ─────────────── v2.0.3+0\n"
+     ]
+    }
+   ],
+   "source": [
+    "Pkg.add(\"Plots\")\n",
+    "Pkg.add(\"GraphsPlots\")\n",
+    "Pkg.add(\"BenchmarkTools\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1969,37 +2008,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "16384-element Vector{Float64}:\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " ⋮\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: Package BenchmarkTools not found in current path.\n- Run `import Pkg; Pkg.add(\"BenchmarkTools\")` to install the BenchmarkTools package.",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Package BenchmarkTools not found in current path.\n",
+      "- Run `import Pkg; Pkg.add(\"BenchmarkTools\")` to install the BenchmarkTools package.\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] macro expansion\n",
+      "    @ ./loading.jl:2208 [inlined]\n",
+      "  [2] macro expansion\n",
+      "    @ ./lock.jl:273 [inlined]\n",
+      "  [3] __require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:2183\n",
+      "  [4] #invoke_in_world#3\n",
+      "    @ ./essentials.jl:1088 [inlined]\n",
+      "  [5] invoke_in_world\n",
+      "    @ ./essentials.jl:1085 [inlined]\n",
+      "  [6] require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:2176\n",
+      "  [7] eval\n",
+      "    @ ./boot.jl:430 [inlined]\n",
+      "  [8] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:2628\n",
+      "  [9] #invokelatest#2\n",
+      "    @ ./essentials.jl:1054 [inlined]\n",
+      " [10] invokelatest\n",
+      "    @ ./essentials.jl:1051 [inlined]\n",
+      " [11] (::VSCodeServer.var\"#217#218\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.124.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:24\n",
+      " [12] withpath(f::VSCodeServer.var\"#217#218\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.124.2/scripts/packages/VSCodeServer/src/repl.jl:276\n",
+      " [13] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.124.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
+      " [14] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.124.2/scripts/packages/JSONRPC/src/typed.jl:67\n",
+      " [15] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#5#10\"{String})\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.124.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:147\n",
+      " [16] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.124.2/scripts/notebook/notebook.jl:35"
+     ]
     }
    ],
    "source": [
@@ -2007,10 +2060,7 @@
     "using  BenchmarkTools \n",
     "\n",
     "N = 128 * 128\n",
-    "k = 300/255\n",
-    "\n",
-    "segment_size = ones(Int64, N)\n",
-    "internal_diff = zeros(Float64, N)"
+    "k = 300/255"
    ]
   },
   {
@@ -2022,25 +2072,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  9.469 ms (228369 allocations: 11.14 MiB)\n"
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `N` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `N` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Documents/graph-segmentation/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X50sZmlsZQ==.jl:12"
      ]
     }
    ],
    "source": [
-    "function initialize_structures()\n",
+    "function initialize_structures(N::Int) \n",
     "    S = Vector{SparseVector{Float64, Int64}}(undef, N) \n",
     "    segment_hash = Dict{Int64, Vector{Int64}}(zip(1:N, [i] for i in 1:N))\n",
+    "    segment_size = ones(Int64, N)\n",
+    "    internal_diff = zeros(Float64, N)\n",
     "    for i in 1:N\n",
     "        S[i] = sparsevec([i], [1.0], N)\n",
     "    end\n",
+    "    return S, segment_hash, segment_size, internal_diff\n",
     "end\n",
+    "\n",
+    "S, segment_hash, segment_size, internal_diff = initialize_structures(N)\n",
     "\n",
     "@btime initialize_structures()"
    ]
@@ -2399,15 +2460,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.5",
+   "display_name": "Julia 1.11.0",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.5"
+   "version": "1.11.0"
   }
  },
  "nbformat": 4,
