working out probabilties

--- a/ode-felzenszwalb.ipynb
+++ b/ode-felzenszwalb.ipynb
@@ -2607,7 +2607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$M_{ij}$ denotes the event of the merging of segments $C_i$ and $C_j$ into $C_i$. We have $P(M_{ij}|)$.\n",
+    "$M_{ij}$ denotes the event of the merging of segments $C_i$ and $C_j$ into $C_i$. We have $P(M_{ij})$.\n",
     "Considering that each $v \\in C_i$ is the probability that $v$ belongs to $C_i$\n",
     "\n",
     "If $M_{ij}$ is true:\n",
@@ -2639,7 +2639,19 @@
     "\n",
     "$$ M_i^+ = \\bigvee_{j \\neq i} M_{ij}$$\n",
     "$P(M_i^+)$ is the probabilty that the node $v$ will belong to the segment $C_i$ in the next timestep if it belongs to any $C_j$ merged with $C_i$.\n",
-    "$$P(M_i^+) = \\sum_{j \\neq i} P(M_{ij}) $$\n"
+    "$$P(M_i^+) = \\sum_{j \\neq i} P(M_{ij}) $$\n",
+    "\n",
+    "The probability of a node $v$ belonging to the $i$-th segment at time $q$ is: $C_i^v(q)$.\n",
+    "\n",
+    "If $M_i^+$, $C_i^v(q+1)$ is true if:\n",
+    "\n",
+    "$$ C^v_i(q) \\vee (M_{ij} \\wedge C_j^v(q))$$\n",
+    "\n",
+    "$$P(C_i^v(q+1)) = P(C^v_i(q)) + \\sum_{j \\neq i} P(M_{ij})P(C_j^v(q))$$\n",
+    "\n",
+    "$$P(\\neg{C_i^v(q+1)})= \\sum_{j\\neq i} P(M_{ji})P(C_i^v(q))$$ \n",
+    "\n",
+    "$C^v_i$ and $C^v_j$ are disjoint at any given moment, so the probability is always $\\in [0.0, 1.0]$"
    ]
   },
   {
