progress with prob modeling

--- a/ode-felzenszwalb.ipynb
+++ b/ode-felzenszwalb.ipynb
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2643,16 +2643,81 @@
     "\n",
     "The probability of a node $v$ belonging to the $i$-th segment at time $q$ is: $C_i^v(q)$.\n",
     "\n",
-    "If $M_i^+$, $C_i^v(q+1)$ is true if:\n",
+    "$C_i^v(q+1)$ is true if:\n",
     "\n",
-    "$$ C^v_i(q) \\vee (M_{ij} \\wedge C_j^v(q))$$\n",
+    "$$ (C^v_i(q) \\wedge \\neg M_i^-) \\vee \\bigvee_{j  \\neq i} \\big( M_{ij} \\wedge C_j^v(q)\\big)$$\n",
     "\n",
-    "$$P(C_i^v(q+1)) = P(C^v_i(q)) + \\sum_{j \\neq i} P(M_{ij})P(C_j^v(q))$$\n",
+    "$$P(C_i^v(q+1)) = P(C^v_i(q))(1 - P(M_i^-)) + \\sum_{j \\neq i} P(M_{ij})P(C_j^v(q))$$\n",
     "\n",
     "$$P(\\neg{C_i^v(q+1)})= \\sum_{j\\neq i} P(M_{ji})P(C_i^v(q))$$ \n",
     "\n",
-    "$C^v_i$ and $C^v_j$ are disjoint at any given moment, so the probability is always $\\in [0.0, 1.0]$"
+    "$C^v_i$ and $C^v_j$ are disjoint at any given moment, so the probability is always $\\in [0.0, 1.0]$\n",
+    "When $v$ is such that $o_q = (v, u)$ or $o_q = (u,v)$, $M_{ij}$ already assumes that $v$ belongs to \n",
+    "the segment $i$ or $j$. Calculating the probability like described above would be incorrect. :("
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initially we have $P(M_{ij}| C_i^v \\wedge C_j^u)$\n",
+    "\n",
+    "![](resources/merge-prob-single.png)\n",
+    "\n",
+    "$$ P(M_{ij} | C_i^v \\wedge C_j^u) = \\frac{P(M_{ij} \\wedge (C_i^v \\wedge C_j^u))}{P(C_i^v \\wedge C_j^u)}$$\n",
+    "$$ P(M_{ij} | C_i^v \\wedge C_j^u) = \\frac{P(M_{ij})}{P(C_i^v)P(C_j^v)} $$\n",
+    "$$ P(M_{ij})= P(M_{ij} | C_i^v \\wedge C_j^u) P(C_i^v)P(C_j^v) $$\n",
+    "\n",
+    "We also have that \n",
+    "\n",
+    "$$ P(M_{ij} | C_i^v ) = \\frac{P(M_{ij} \\wedge C_i^v)}{P(C_i^v)}$$\n",
+    "$$ P(M_{ij} | C_i^v ) = \\frac{P(M_{ij})}{P(C_i^v)}$$\n",
+    "$$ P(M_{ij} | C_i^v ) = \\frac{P(M_{ij} | C_i^v \\wedge C_j^u) P(C_i^v)P(C_j^u)}{P(C_i^v)}$$\n",
+    "$$ P(M_{ij} | C_i^v ) = P(M_{ij} | C_i^v \\wedge C_j^u) P(C_j^u)$$\n",
+    "\n",
+    "Likewise for $P(M_{ij}| C_j^u)$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the edge we are considering in this timestep $q$ is $o(q) = (v, u)$, there are the following cases to consider \n",
+    "\n",
+    "![](resources/merge-v.png)\n",
+    "\n",
+    "We want to know the probability of $v$ belonging to segment $i$ at the timestep $q+1$. Since there is no chance of the node $v$ being alocated to another segment through merging, \n",
+    "\n",
+    "$$P(C_i^v(q+1)) = P(C_i^v(q)) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](resources/merge-u.png)\n",
+    "\n",
+    "We want to know the probability that $u$ will belong to the segment $j$ at the next timestep. That will be the probability that $u$ belongs to the segment $j$ and, given that, the segment $j$ is not merged into anything else. \n",
+    "\n",
+    "$$ P(C_j^u(q+1)) = P(C_j^u(q)) \\bigg(1 - \\sum_{i \\neq j} P\\Big(M_{ij} | C_j^u(q)\\Big)\\bigg) $$\n",
+    "$$ P(C_j^u(q+1)) = P(C_j^u(q)) \\bigg(1 - \\sum_{i \\neq j} P(M_{ij} | C_i^v \\wedge C_j^u) P(C_i^v)\\bigg) $$\n",
+    "$$ P(C_j^u(q+1)) = P(C_j^u(q)) - \\sum_{i \\neq j} P\\Big(M_{ij} | C_i^v(q) \\wedge C_j^u(q)\\Big) P\\Big(C_i^v(q)\\Big)P\\Big(C_j^u(q)\\Big) $$\n",
+    "$$ P(C_j^u(q+1)) = P(C_j^u(q)) - \\sum_{i \\neq j} P(M_{ij}) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](resources/merge-t.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
