progrss with prob modeling

--- a/ode-felzenszwalb.ipynb
+++ b/ode-felzenszwalb.ipynb
@@ -2699,6 +2699,11 @@
     "\n",
     "We want to know the probability that $u$ will belong to the segment $j$ at the next timestep. That will be the probability that $u$ belongs to the segment $j$ and, given that, the segment $j$ is not merged into anything else. \n",
     "\n",
+    "$$ C_j^u(q+1) \\leftarrow \\neg M_j^- \\cap C_j^u(q)$$\n",
+    "\n",
+    "\n",
+    "$$ P(C_j^u(q+1)) = P\\Big(C_j^u(q)\\Big)  P\\Big(\\neg M_{j}^- | C_j^u(q) \\Big) $$\n",
+    "\n",
     "$$ P(C_j^u(q+1)) = P(C_j^u(q)) \\bigg(1 - \\sum_{i \\neq j} P\\Big(M_{ij} | C_j^u(q)\\Big)\\bigg) $$\n",
     "$$ P(C_j^u(q+1)) = P(C_j^u(q)) \\bigg(1 - \\sum_{i \\neq j} P(M_{ij} | C_i^v \\wedge C_j^u) P(C_i^v)\\bigg) $$\n",
     "$$ P(C_j^u(q+1)) = P(C_j^u(q)) - \\sum_{i \\neq j} P\\Big(M_{ij} | C_i^v(q) \\wedge C_j^u(q)\\Big) P\\Big(C_i^v(q)\\Big)P\\Big(C_j^u(q)\\Big) $$\n",
