progress with prob modeling

--- a/ode-felzenszwalb.ipynb
+++ b/ode-felzenszwalb.ipynb
@@ -2714,15 +2714,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](resources/merge-t.png)"
+    "![](resources/merge-t.png)\n",
+    "\n",
+    "We want to know what's the probability that the node $t$, such that $t \\notin [v,u]$,will belong to the segment $j$ in the next timestep.\n",
+    "\n",
+    "$$ C^t_j(q+1) \\leftarrow C^t_j(q) \\cap \\neg M_j^- $$\n",
+    "\n",
+    "The event where $j$ is merged into another segment can be considered independent of the event where $t$ belongs to the segment $j$.\n",
+    "\n",
+    "$$P\\big(C^t_j(q+1)\\big) = P\\big(C^t_j(q)\\big) P\\big(\\neg M_j^-\\big)$$\n",
+    "$$P\\big(C^t_j(q+1)\\big) = P\\big(C^t_j(q)\\big) \\big(1 - P\\big(M_j^-\\big)\\big)$$\n",
+    "$$P\\big(C^t_j(q+1)\\big) = P\\big(C^t_j(q)\\big) \\Bigg(1 - \\sum_{i\\neq j}P\\big(M_{ij}\\big)\\Bigg)$$\n",
+    "\n",
+    "We also want to know the probability of $t$ belonging to $i$ in the next timestep. \n",
+    "\n",
+    "$$ C^t_i(q+1) \\leftarrow  C^t_i(q) \\cup \\neg C^t_i(q)\\Bigg(\\bigvee_{j \\neq i} M_{ij}C^t_j(q)\\Bigg) $$\n",
+    "$$P\\big(C^t_i(q+1)\\big) = P\\big(C_i^t(q)\\big) + \\Big(1-P\\big(C_i^t(q)\\big)\\Big) \\Bigg(\\sum_{j \\neq i}P\\big(M_{ij}\\big)P\\big(C_j^t(q)\\big)\\Bigg)$$\n",
+    "$$P\\big(C^t_i(q+1)\\big) = P\\big(C_i^t(q)\\big) +\\Bigg(\\sum_{j \\neq i}P\\big(M_{ij}\\big)P\\big(C_j^t(q)\\big)-P\\big(M_{ij}\\big)P\\big(C_j^t(q)\\big)P\\big(C_i^t(q)\\big)\\Bigg)$$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### TL;DR\n",
+    "\n",
+    "For any node $t | t \\notin (v, u)$, \n",
+    "\n",
+    "\n",
+    "$$ C^t_j(q+1) \\leftarrow C^t_j(q) \\cap \\neg M_j^- $$\n",
+    "\n",
+    "$$P\\big(C^t_j(q+1)\\big) = P\\big(C^t_j(q)\\big) \\Bigg(1 - \\sum_{i\\neq j}P\\big(M_{ij}\\big)\\Bigg)$$\n",
+    "\n",
+    "The node $v$ will necessarily remain in the same segment. For $u$:\n",
+    "\n",
+    "$$ C_j^u(q+1) \\leftarrow \\neg M_j^- \\cap C_j^u(q)$$\n",
+    "$$ P\\big(C_j^u(q+1)\\big) = P\\big(C_j^u(q)\\big) - \\sum_{i \\neq j} P\\big(M_{ij}\\big) $$\n",
+    "\n",
+    "The difference in treatment of the nodes $u$ and $t$ comes from the fact that $C^t_j$ and $M_{ij} | i \\neq j$ are independent, while  $M_{ij}$ depends on the fact that $C^u_j$. \n",
+    "\n",
+    "```julia\n",
+    "Cj_off = -Cj .* sum(P[:, j])\n",
+    "Cj_off[u] *= Cj[u]\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2759,7 +2794,20 @@
     "Therefore the actual \n",
     "$$ P(M_{ij} ) = sigmoid\\left(MInt(C_i,C_j)-w(o_q)\\right)P(v_i \\in C_i)P(v_j \\in C_j)$$\n",
     "\n",
-    "![](resources/merge_probability.png)"
+    "![](resources/merge_probability.png)\n",
+    "\n",
+    "This is a visual intuition for the probability matrix. The main diagonal will always be zero. \n",
+    "\n",
+    "![](resources/prob-matrix.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collect(Iterators.product([1,2,3], [4,5,6]))"
    ]
   },
   {
@@ -2834,15 +2882,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.5",
+   "display_name": "Julia 1.11.0",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.5"
+   "version": "1.11.0"
   }
  },
  "nbformat": 4,
