--- a/ode-felzenszwalb.ipynb
+++ b/ode-felzenszwalb.ipynb
@@ -2429,14 +2429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  5.419 ms (163853 allocations: 9.91 MiB)\n"
+      "  5.280 ms (163853 allocations: 9.91 MiB)\n"
      ]
     },
     {
@@ -2571,13 +2571,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "get_vertices (generic function with 2 methods)"
+       "get_segments_from_vertices (generic function with 2 methods)"
       ]
      },
      "metadata": {},
@@ -2587,9 +2587,9 @@
    "source": [
     "get_segments(S::Vector{SparseVector{Float64, Int64}}, cs::AbstractVector) = @view S[cs]\n",
     "\n",
-    "get_vertices(S::Vector{SparseVector{Float64, Int64}}, vi::Int) = @inbounds [c for c in 1:length(S) if S[c][vi] > 0.0]\n",
+    "get_segments_from_vertices(S::Vector{SparseVector{Float64, Int64}}, vi::Int) = @inbounds [c for c in 1:length(S) if S[c][vi] > 0.0]\n",
     "\n",
-    "function get_vertices(S::Vector{SparseVector{Float64, Int64}}, segment_hash::Dict{Int64, Vector{Int64}}, vi::Int) \n",
+    "function get_segments_from_vertices(S::Vector{SparseVector{Float64, Int64}}, segment_hash::Dict{Int64, Vector{Int64}}, vi::Int) \n",
     "    V_I = @inbounds segment_hash[vi]\n",
     "    V_K = [S[i][vi] for i in V_I]\n",
     "    return V_I, V_K\n",
@@ -2729,8 +2729,7 @@
     "We also want to know the probability of $t$ belonging to $i$ in the next timestep. \n",
     "\n",
     "$$ C^t_i(q+1) \\leftarrow  C^t_i(q) \\cup \\neg C^t_i(q)\\Bigg(\\bigvee_{j \\neq i} M_{ij}C^t_j(q)\\Bigg) $$\n",
-    "$$P\\big(C^t_i(q+1)\\big) = P\\big(C_i^t(q)\\big) + \\Big(1-P\\big(C_i^t(q)\\big)\\Big) \\Bigg(\\sum_{j \\neq i}P\\big(M_{ij}\\big)P\\big(C_j^t(q)\\big)\\Bigg)$$\n",
-    "$$P\\big(C^t_i(q+1)\\big) = P\\big(C_i^t(q)\\big) +\\Bigg(\\sum_{j \\neq i}P\\big(M_{ij}\\big)P\\big(C_j^t(q)\\big)-P\\big(M_{ij}\\big)P\\big(C_j^t(q)\\big)P\\big(C_i^t(q)\\big)\\Bigg)$$"
+    "$$P\\big(C^t_i(q+1)\\big) = P\\big(C_i^t(q)\\big) + \\Big(1-P\\big(C_i^t(q)\\big)\\Big) \\Bigg(\\sum_{j \\neq i}P\\big(M_{ij}\\big)P\\big(C_j^t(q)\\big)\\Bigg)$$"
    ]
   },
   {
@@ -2743,8 +2742,10 @@
     "\n",
     "\n",
     "$$ C^t_j(q+1) \\leftarrow C^t_j(q) \\cap \\neg M_j^- $$\n",
-    "\n",
     "$$P\\big(C^t_j(q+1)\\big) = P\\big(C^t_j(q)\\big) \\Bigg(1 - \\sum_{i\\neq j}P\\big(M_{ij}\\big)\\Bigg)$$\n",
+    "and, \n",
+    "$$ C^t_i(q+1) \\leftarrow  C^t_i(q) \\cup \\neg C^t_i(q)\\Bigg(\\bigvee_{j \\neq i} M_{ij}C^t_j(q)\\Bigg) $$\n",
+    "$$P\\big(C^t_i(q+1)\\big) = P\\big(C_i^t(q)\\big) + \\Big(1-P\\big(C_i^t(q)\\big)\\Big) \\Bigg(\\sum_{j \\neq i}P\\big(M_{ij}\\big)P\\big(C_j^t(q)\\big)\\Bigg)$$\n",
     "\n",
     "The node $v$ will necessarily remain in the same segment. For $u$:\n",
     "\n",
@@ -2756,7 +2757,97 @@
     "```julia\n",
     "Cj_off = -Cj .* sum(P[:, j])\n",
     "Cj_off[u] *= Cj[u]\n",
+    "\n",
+    "Ci_off = (1 - Ci) .* P*Cj\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×4 Matrix{Float64}:\n",
+       " 0.247326  0.908995  0.360568   0.762756\n",
+       " 0.159478  0.506912  0.177673   0.925287\n",
+       " 0.609758  0.357232  0.0381889  0.475004\n",
+       " 0.618017  0.682549  0.410647   0.193776\n",
+       " 0.622832  0.74557   0.9923     0.60979"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# v, u = 1, 2\n",
+    "# V_I, V_K = get_segments_from_vertices(S, segment_hash, v)\n",
+    "# U_I, U_K = get_segments_from_vertices(S, segment_hash, u)\n",
+    "# P = merge_probability(V_I, V_K, U_I, U_K, internal_diff, k)\n",
+    "v, u = 1, 2\n",
+    "nv = 5\n",
+    "nu = 4\n",
+    "V_I = rand(1:N, nv)\n",
+    "V_K = rand(nv)\n",
+    "U_I = rand(1:N, nu)\n",
+    "U_K = rand(nu)\n",
+    "P = rand(nv, nu)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×1 Matrix{SparseVector{Float64, Int64}}:\n",
+       "   [15042]  =  -2.25741\n",
+       "   [5639]  =  -3.20126\n",
+       "   [10855]  =  -1.97938\n",
+       "   [14621]  =  -2.96661"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Ci = @view S[V_I]\n",
+    "Cj = @view S[U_I]\n",
+    "\n",
+    "Cj_off = -Cj .* sum(P, dims=1)'\n",
+    "fix_u!(C, C_off, u) = C_off[u] *= C[u]\n",
+    "fix_u!.(Cj, Cj_off, u)\n",
+    "\n",
+    "Ci_off = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element view(::Vector{SparseVector{Float64, Int64}}, [15042, 5639, 10855, 14621]) with eltype SparseVector{Float64, Int64}:\n",
+       "   [15042]  =  1.0\n",
+       "   [5639]  =  1.0\n",
+       "   [10855]  =  1.0\n",
+       "   [14621]  =  1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Cj"
    ]
   },
   {
@@ -2812,40 +2903,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  115.902 μs (33 allocations: 481.22 KiB)\n"
+      "  99.167 μs (33 allocations: 481.22 KiB)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "101×100 Matrix{Float64}:\n",
-       " 0.0179257   0.267007   0.00160162   …  0.235346   0.240197   0.0468241\n",
-       " 0.0379532   0.565319   0.00339101      0.498286   0.508557   0.0991382\n",
-       " 0.0263772   0.392893   0.00235673      0.346306   0.353444   0.0689004\n",
-       " 0.0315587   0.470072   0.00281968      0.414333   0.422873   0.0824349\n",
-       " 0.0254669   0.379333   0.00227539      0.334354   0.341245   0.0665224\n",
-       " 0.0119366   0.177797   0.0010665    …  0.156715   0.159945   0.0311797\n",
-       " 0.0161189   0.240094   0.00144018      0.211625   0.215987   0.0421045\n",
-       " 0.040158    0.598161   0.00358801      0.527233   0.538101   0.104897\n",
-       " 0.0224912   0.33501    0.00200952      0.295286   0.301372   0.0587495\n",
-       " 0.00123916  0.0184575  0.000110716     0.0162689  0.0166042  0.00323683\n",
-       " ⋮                                   ⋱                        \n",
-       " 0.0188203   0.280332   0.00168154      0.247091   0.252184   0.0491609\n",
-       " 0.0189984   0.282985   0.00169746      0.24943    0.254571   0.0496261\n",
-       " 0.0312333   0.465225   0.00279061      0.41006    0.418513   0.0815849\n",
-       " 0.00895214  0.133344   0.000799849  …  0.117532   0.119955   0.023384\n",
-       " 0.029568    0.44042    0.00264182      0.388197   0.396199   0.0772351\n",
-       " 0.0296419   0.441522   0.00264842      0.389168   0.397189   0.0774282\n",
-       " 0.0175784   0.261833   0.00157058      0.230786   0.235543   0.0459168\n",
-       " 0.0302256   0.450216   0.00270057      0.396831   0.40501    0.0789528\n",
-       " 0.00736552  0.109711   0.000658089  …  0.0967017  0.0986949  0.0192396"
+       " 0.088856   0.0186055   0.00119865   …  0.0484453   0.025469    0.0885421\n",
+       " 0.311424   0.0652087   0.00420105      0.169792    0.0892642   0.310323\n",
+       " 0.366988   0.0768433   0.00495061      0.200086    0.105191    0.365692\n",
+       " 0.334564   0.0700541   0.00451322      0.182408    0.0958971   0.333382\n",
+       " 0.348657   0.0730049   0.00470332      0.190091    0.0999365   0.347425\n",
+       " 0.458627   0.0960315   0.00618681   …  0.250048    0.131458    0.457007\n",
+       " 0.412822   0.0864404   0.00556891      0.225075    0.118328    0.411364\n",
+       " 0.200019   0.0418817   0.00269822      0.109052    0.0573319   0.199312\n",
+       " 0.0197998  0.00414586  0.000267096     0.0107951   0.00567528  0.0197299\n",
+       " 0.0755219  0.0158135   0.00101878      0.0411754   0.0216471   0.0752551\n",
+       " ⋮                                   ⋱                          \n",
+       " 0.128195   0.0268425   0.00172932      0.0698931   0.0367448   0.127742\n",
+       " 0.499719   0.104636    0.00674112      0.272452    0.143236    0.497953\n",
+       " 0.386733   0.0809776   0.00521697      0.210851    0.11085     0.385367\n",
+       " 0.156076   0.0326807   0.00210544   …  0.0850945   0.0447366   0.155525\n",
+       " 0.460553   0.0964348   0.00621279      0.251099    0.13201     0.458926\n",
+       " 0.283676   0.0593987   0.00382675      0.154663    0.0813109   0.282674\n",
+       " 0.329367   0.0689659   0.00444311      0.179575    0.0944075   0.328204\n",
+       " 0.176897   0.0370402   0.00238631      0.0964459   0.0507044   0.176272\n",
+       " 0.0141202  0.00295662  0.000190479  …  0.00769849  0.00404731  0.0140703"
       ]
      },
      "metadata": {},
