progress in merge op

--- a/ode-felzenszwalb.ipynb
+++ b/ode-felzenszwalb.ipynb
@@ -2544,6 +2544,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  618.448 ns (9 allocations: 368 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Int64}:\n",
+       " 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v = S[1]\n",
+    "vi = 1\n",
+    "@btime @inbounds cs = [c for c in collect(segment_hash[vi]) if S[c][vi] > 0.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -2571,13 +2600,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "get_segments_from_vertices (generic function with 2 methods)"
+       "get_segments_from_vertices (generic function with 3 methods)"
       ]
      },
      "metadata": {},
@@ -2593,7 +2622,32 @@
     "    V_I = @inbounds segment_hash[vi]\n",
     "    V_K = [S[i][vi] for i in V_I]\n",
     "    return V_I, V_K\n",
+    "end\n",
+    "\n",
+    "function get_segments_from_vertices(S::Vector{SparseVector{Float64, Int64}}, segment_hash::Dict{Int64, Set{Int64}}, vi::Int) \n",
+    "    V_I = @inbounds collect(segment_hash[vi])\n",
+    "    V_K = [S[i][vi] for i in V_I]\n",
+    "    return V_I, V_K\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1], [1.0])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "get_segments_from_vertices(S, segment_hash, 1)"
    ]
   },
   {
